UNI-218 readme fixed

--- a/api/env.example
+++ b/api/env.example
@@ -8,6 +8,13 @@ SUPABASE_URL=https://aqrtbnzjephixlekcmsr.supabase.co
 # Use your anon or service role key
 SUPABASE_KEY=your_supabase_key_here
 
+# OpenAI API credentials
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Weaviate configuration
+WEAVIATE_URL=http://localhost:8080
+WEAVIATE_API_KEY=your_weaviate_api_key_here
+
 # Defaults and limits
 DEFAULT_PRODUCTS=iPhone16
 MAX_COMMENTS_PER_SUBMISSION=50
